Fix navigation on mobile

--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -4,12 +4,17 @@
   $btn-bar-spacing: 0.4rem;
 
   .p-navigation {
-    height: 10vh;
+    background-color: $color-background;
+    min-height: 10vh;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 
     .p-navigation__row {
       display: flex;
       flex-direction: column;
       padding-top: 2.5rem;
+      padding-bottom: 0.5rem;
 
       @media (min-width: $breakpoint-medium) {
         flex-direction: row;
@@ -23,14 +28,28 @@
 
     .p-navigation__nav {
       display: flex;
-      flex-direction: column;
-      padding-top: 5rem;
+      flex-direction: row;
+      justify-content: flex-end;
+      width: 100%;
+      padding-top: 0;
+      position: relative;
 
-      @media (min-width: $breakpoint-medium) {
-        flex-direction: row;
-        justify-content: flex-end;
-        width: 100%;
-        padding-top: 0;
+      @media (max-width: $breakpoint-medium) {
+        background-color: $color-background;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding-top: 7rem;
+        top: 5rem;
+        transform: translateY(100vh);
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+        z-index: 5;
+
+        &.is-open {
+        transform: translateY(0);
+        }
       }
     }
 
@@ -113,7 +132,7 @@
 
       &:hover {
         text-decoration: none;
-        color: #FF00B5;
+        color: $color-secondary;
 
         .p-icon--designza {
           background-image: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1080 1080'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%2300B5FF;%7D.cls-2%7Bfill:%23FF00B5;%7D.cls-3%7Bfill:%23fff;%7D%3C/style%3E%3C/defs%3E%3Cpath class='cls-1' d='M397.11,628A55,55,0,0,1,452,682.89V985.11A55,55,0,0,1,397.11,1040H94.89A55,55,0,0,1,40,985.11V682.89A55,55,0,0,1,94.89,628H397.11m0-40H94.89A94.89,94.89,0,0,0,0,682.89V985.11A94.89,94.89,0,0,0,94.89,1080H397.11A94.89,94.89,0,0,0,492,985.11V682.89A94.89,94.89,0,0,0,397.11,588Z'/%3E%3Cpath class='cls-3' d='M715,628H985.11A55,55,0,0,1,1040,682.89V953l39.7,39.7q.3-3.76.3-7.59V682.89A94.89,94.89,0,0,0,985.11,588H682.89q-3.82,0-7.59.3Z'/%3E%3Cpath class='cls-3' d='M953,1040H682.89A55,55,0,0,1,628,985.11V715l-39.7-39.7q-.3,3.76-.3,7.59V985.11A94.89,94.89,0,0,0,682.89,1080H985.11q3.82,0,7.59-.3Z'/%3E%3Cpath class='cls-3' d='M127,40H397.11A55,55,0,0,1,452,94.89V365l39.7,39.7q.3-3.76.3-7.59V94.89A94.89,94.89,0,0,0,397.11,0H94.89Q91.07,0,87.3.3Z'/%3E%3Cpath class='cls-3' d='M365,452H94.89A55,55,0,0,1,40,397.11V127L.3,87.3Q0,91.07,0,94.89V397.11A94.89,94.89,0,0,0,94.89,492H397.11q3.83,0,7.59-.3Z'/%3E%3Cpath class='cls-2' d='M1060.27,192.3,675,0V46.09L1035.44,226,675,405.91V452l385.26-192.3c12-6,19.47-18.91,19.47-33.7S1072.27,198.3,1060.27,192.3Z'/%3E%3C/svg%3E");
