--- a/src/sass/p-strip.scss
+++ b/src/sass/p-strip.scss
@@ -6,43 +6,6 @@
     display: flex;
     height: 90vh;
     padding: 0;
-
-    .background-line {
-      position: absolute;
-      width: 100%;
-      height: 1px;
-      top: 80%;
-      left: 0;
-      background: rgba(255, 255, 255, 0.1);
-      overflow: hidden;
-
-      &::after {
-        content: "";
-        display: block;
-        position: absolute;
-        height: 100%;
-        width: 10vh;
-        left: 110%;
-        background: linear-gradient(
-          to left,
-          rgba(255, 255, 255, 0) 0%,
-          #ffffff 75%,
-          #ffffff 100%
-        );
-        animation: line-run 10s 0s infinite;
-        animation-fill-mode: backwards;
-        animation-timing-function: cubic-bezier(0, 0.97, 0.4, 0.8);
-      }
-    }
-  }
-
-  @keyframes line-run {
-    0% {
-      left: 110%;
-    }
-    100% {
-      left: -50%;
-    }
   }
 
   .p-strip--light {
@@ -85,4 +48,3 @@
     }
   }
 }
-
